# Ros2-Gazebo

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  start.sh
cust/: 2026-04-24 21-37-41.mkv
ros2_ws/gazebo_controller_pkg/: CMakeLists.txt  package.xml  path.txt
ros2_ws/gazebo_controller_pkg/gazebo_controller_pkg/: fuzzy_controller.py  path_planner.py  slam_node.py  wall_follower.py
